# cw-glyph

./: .gitignore  HANDOFF_G6PZ_G12.md  HANDOFF_SESSION_2026-06-29.md  HANDOFF_SESSION_2026-06-30.md  HANDOFF_SESSION_2026-07-01.md  HANDOFF_SESSION_2026-07-02.md  HOWTO_DECODING.md  LICENSE  PROJET.md  README.md  REPRISE_PLAN.md  pyproject.toml  test_real_pipeline
morse_char_recognizer/: __init__.py  audio_io.py  baseline.py  beam_decode.py  classes.py  cnn_beam.py  dataset.py  decode.py  features.py  inference.py  live.py  metrics.py  model.py  morse_table.py  preview.py  real_align.py  segment.py  segmentation_metrics.py  span_dataset.py  torch_data.py
morse_char_recognizer/ctc/: __init__.py  corpus.py  dataset.py  lm.py  (+6 more)
morse_synth/: keying.py  operator.py
scripts/: cw_ctc.py  decode_beam.py  decode_cnn_beam.py  decode_cnn_synthetic.py  decode_synthetic.py  decode_wav.py  eval_baseline.py  eval_cnn.py  eval_ctc_lm.py  eval_ctc_vs_baseline.py  eval_livetest.py  eval_segmentation_synth.py  eval_websdr_beam.py  finetune_cnn_real.py  harvest_real_spans.py  preview_features.py  preview_segments.py  preview_wav_decode.py  run_reference_experiment.sh  test_real_pipeline.py  train_cnn.py  train_cnn_spans.py  train_ctc.py  tune_livetest.py
tests/: test_baseline.py  test_beam_decode.py  test_cnn_beam.py  test_dataset.py  test_decode.py  test_decode_cnn_segments.py  test_features.py  test_inference.py  test_live.py  test_metrics.py  test_model.py  test_operator.py  test_real_align.py  test_segment.py  test_segmentation_metrics.py  test_span_dataset.py  test_torch_data.py
(+9 files in other folders)
