[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cw-glyph"
version = "0.1.0"
description = "Character-level CW/Morse audio recognition experiments"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["morse_char_recognizer", "morse_synth"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
